cambio tamaño del boton

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -30,9 +30,9 @@
                         <header class="card-header">
                             <div class="card-header-title">Películas</div>
                             <div class="card-header-actions">
-                                <button class="button is-small">Agregar</button>
-                                <button class="button is-small">Editar</button>
-                                <button class="button is-small">Eliminar</button>
+                                <button class="button is-normal">Agregar</button>
+                                <button class="button is-normal">Editar</button>
+                                <button class="button is-normal">Eliminar</button>
                             </div>
                         </header>
 
