--- a/client/src/index.html
+++ b/client/src/index.html
@@ -33,6 +33,7 @@
                                 <button class="button is-small">Agregar</button>
                                 <button class="button is-small">Editar</button>
                                 <button class="button is-small">Eliminar</button>
+                                <button class="button is-small">ghjdsagf</button>
                             </div>
                         </header>
 
