--- a/client/src/index.html
+++ b/client/src/index.html
@@ -30,7 +30,7 @@
                         <header class="card-header">
                             <div class="card-header-title">Películas</div>
                             <div class="card-header-actions">
-                                <button class="button is-normal">Agregar</button>
+                                <button class="button is-small">Agregar</button>
                                 <button class="button is-normal">Editar</button>
                                 <button class="button is-normal">Eliminar</button>
                             </div>
