--- a/client/src/index.html
+++ b/client/src/index.html
@@ -31,7 +31,7 @@
                             <div class="card-header-title">Películas</div>
                             <div class="card-header-actions">
                                 <button class="button is-normal">Agregar</button>
-                                <button class="button is-normal">Editar</button>
+                                <button class="button is-normal is-primary" >Editar</button>
                                 <button class="button is-normal">Eliminar</button>
                             </div>
                         
